--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -178,6 +178,9 @@ footer img
 #grade-table td
 {
 	vertical-align:middle;
+    white-space:nowrap;
+    padding-top:0;
+    padding-bottom:0;
 }
 
 #grade-table th
