--- a/app/views/students/_table.html.erb
+++ b/app/views/students/_table.html.erb
@@ -8,6 +8,11 @@
 		<th>Attend</th>
 		<th class="rotate">Spoken</th>
 		<th class="rotate">Status</th>
+		
+		<th class="rotate">Started</th>
+		
+		<th class="rotate">Submitted</th>
+		
 		<% psets.each do |pset| %>
 		<th class="rotate"><div><%= pset.name %></div></th>
 		<% end %>
@@ -17,7 +22,7 @@
 	<tr><td colspan="20"><%= group ? "#{group.name} (#{user_list.size})" : "Groupless" %></td></tr>
 
 	<% user_list.each do |user| %>
-	<tr>
+	<tr <%= 'class=table-warning' if user.stagnated? %>>
 		<td>
 			<%= link_to user.name, user_path(user) %><%= "@" if user.ping and user.ping.active %>
 			<% if user.notes.present? %>
@@ -48,6 +53,10 @@
 		
 		<td><%= best_in_place(user, :status, as: :select, collection: { '0' => '-', '1' => '<span class="text-success">excellent</span>'.html_safe, '2' => '<span class="text-success">okay</span>'.html_safe, '3' => '<span class="text-warning">hard times</span>'.html_safe, '4' => '<span class="text-danger">struggling</span>'.html_safe }) %></td>
 
+		<td><%= user.started_at.strftime("%e %b") if user.started_at %></td>
+		
+		<td><%= time_ago_in_words(user.last_submitted_at) if user.last_submitted_at %></td>
+
 		<% subs = user.submits.group_by(&:pset_id)  %>
 		<% psets.each do |pset| %>
 		<td>
@@ -61,15 +70,3 @@
 	<% end %>
 
 </table>
-
-<script type="text/javascript">
-$(function() {
-	$(".bar").sparkline('html', { type: 'bar', chartRangeMax: 8, barWidth: 8 });
-})
-</script>
-
-<script>
-$(function () {
-  $('[data-toggle="tooltip"]').tooltip()
-})
-</script>
