--- a/app/views/layouts/_float_nav.html.erb
+++ b/app/views/layouts/_float_nav.html.erb
@@ -1,5 +1,5 @@
 <ul id="icon-nav" class="nav">
-	<% if Settings.hands_allow && current_user.valid_profile? %>
+	<% if Settings.hands_allow && current_user.valid_profile? && current_user.student? %>
 	<li class="nav-item dropdown" id="ama-nav">
 		<a href="#" id="ama-dd" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "hand-pointer-o", class: "fa-fw" %></a>
 		<div class="dropdown-menu dropdown-menu-right" id="ama-menu">
