--- a/app/views/layouts/full-width.html.erb
+++ b/app/views/layouts/full-width.html.erb
@@ -19,6 +19,12 @@
 
 <body>
 
+	<div id="navbar" class="navbar bg-white navbar-light">
+		<%= render 'layouts/brand' %>
+		<%= yield :navbar_items %>
+		<%= render 'layouts/float_nav' %>
+	</div>
+
 	<div class="container-fluid" style="height:100vh; max-width:1366px">
 
 		<% if flash[:alert] %>
@@ -37,14 +43,6 @@
 
 		<div class="row" style="">
 			
-			<div id="navbar" class="col-md-12 p-4 nav bg-white navbar-light justify-content-between align-items-center">
-				<%= render 'layouts/brand' %>
-				<%= yield :navbar_items %>
-				<div class="ml-auto p-0 align-middle">
-					<%= render 'layouts/float_nav' %>
-				</div>
-			</div>
-
 			<div id="content" class="px-3 py-0 col-md-12">
 				<%= yield %>
 			</div>
