--- a/app/views/layouts/full-width.html.erb
+++ b/app/views/layouts/full-width.html.erb
@@ -25,7 +25,7 @@
 		<%= render 'layouts/float_nav' %>
 	</div>
 
-	<div class="container-fluid" style="height:100vh; max-width:1366px">
+	<div class="container-fluid" style="height:100vh">
 
 		<% if flash[:alert] %>
 		<div class="alert alert-danger alert-dismissible fade show">
