--- a/app/assets/stylesheets/tweaks.scss
+++ b/app/assets/stylesheets/tweaks.scss
@@ -11,6 +11,11 @@
           box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
 }
 
+.bar
+{
+    font-family: "Menlo";
+}
+
 @media screen and (-webkit-min-device-pixel-ratio:0) { 
 
 	#content > .list-group {
