--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -6,7 +6,7 @@
 $(function()
 {
 	$('.best_in_place').best_in_place()
-	$(".bar").sparkline('html', { type: 'bar', chartRangeMax: 8, barWidth: 8 });
+	// $(".bar").sparkline('html', { type: 'bar', chartRangeMax: 8, barWidth: 8 });
 	$('[data-toggle="tooltip"]').tooltip()
 })
 
