--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -95,7 +95,10 @@
 
 #icon-nav
 {
-    position:-webkit-sticky; top:0; z-index:1000; background-color:white;
+    position:-webkit-sticky;
+    top:0;
+    z-index:1000;
+//    background-color:white;
 }
 
 #ama-nav .dropdown-menu
