--- a/app/views/layouts/full-width.html.erb
+++ b/app/views/layouts/full-width.html.erb
@@ -19,7 +19,7 @@
 
 <body>
 
-	<div id="navbar" class="navbar bg-white navbar-light">
+	<div id="navbar" class="navbar bg-dark navbar-dark">
 		<%= render 'layouts/brand' %>
 		<%= yield :navbar_items %>
 		<%= render 'layouts/float_nav' %>
