--- a/app/views/layouts/_float_nav.html.erb
+++ b/app/views/layouts/_float_nav.html.erb
@@ -1,4 +1,4 @@
-<ul id="icon-nav" class="nav">
+<ul id="icon-nav" class="nav navbar-nav">
 	<% if Settings.hands_allow && current_user.valid_profile? && current_user.student? %>
 	<li class="nav-item dropdown" id="ama-nav">
 		<a href="#" id="ama-dd" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "hand-pointer-o", class: "fa-fw" %></a>
