--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -5,31 +5,36 @@
 		</button>
 		<ul class="dropdown-menu dropdown-menu-right">
 			<% @groups.each do |group| %>
-			<li <%= 'class=disabled' if @student.group_id == group.id %> ><%= link_to "Move to #{group.name}".html_safe, user_assign_group_path(user_id: @student.id, group_id: group.slug), method: :post %></li>
+			<%= link_to "Move to #{group.name}".html_safe, user_assign_group_path(user_id: @student.id, group_id: group.slug), method: :post, class: 'dropdown-item' + class_if(@student.group_id == group.id, 'disabled') %>
 			<% end if @groups %>
 			<% if @groups.any? %>
-			<li role="separator" class="divider"></li>
+			<div class="dropdown-divider"></div>
 			<% end %>
 			<% @schedules.each do |schedule| %>
-			<li <%= 'class=disabled' if @student.schedule_id == schedule.id %> ><%= link_to "Assign to #{schedule.name}".html_safe, user_assign_schedule_path(user_id: @student.id, schedule_id: schedule.id), method: :post %></li>
+			<%= link_to "Assign to #{schedule.name}".html_safe, user_assign_schedule_path(user_id: @student.id, schedule_id: schedule.id), method: :post, class: 'dropdown-item' + class_if(@student.schedule_id == schedule.id, 'disabled') %>
 			<% end %>
 			<% if @schedules.any? %>
-			<li><%= link_to 'Remove from all schedules', user_path(id: @student.id, user: { schedule_id: nil }), method: :put %></li>
-			<li role="separator" class="divider"></li>
+			<%= link_to 'Remove from all schedules', user_path(id: @student.id, user: { schedule_id: nil }), method: :put, class: 'dropdown-item' %>
+			<div class="dropdown-divider"></div>
 			<% end %>
 			<% if @student.active? %>
-			<li><%= link_to 'Mark as inactive', user_path(id: @student.id, user: { active: false }), method: :put %></li>
+			<%= link_to 'Mark as inactive', user_path(id: @student.id, user: { active: false }), method: :put, class: 'dropdown-item' %>
 			<% else %>
-			<li><%= link_to 'Mark as active', user_path(id: @student.id, user: { active: true }), method: :put %></li>
+			<%= link_to 'Mark as active', user_path(id: @student.id, user: { active: true }), method: :put, class: 'dropdown-item' %>
+			<% end %>
+			<% if @student.done? %>
+			<%= link_to 'Mark as not done', user_path(id: @student.id, user: { done: false }), method: :put, class: 'dropdown-item' %>
+			<% else %>
+			<%= link_to 'Mark as done', user_path(id: @student.id, user: { done: true }), method: :put, class: 'dropdown-item' %>
 			<% end %>
 			<% if current_user.admin? %>
-			<li role="separator" class="divider"></li>
-			<li><%= link_to 'Make assistant', user_path(id: @student.id, user: { role: :assistant }), method: :put %></li>
-			<li><%= link_to 'Make head', user_path(id: @student.id, user: { role: :head }), method: :put %></li>
-			<li><%= link_to 'Make admin', user_path(id: @student.id, user: { role: :admin }), method: :put %></li>
-			<li><%= link_to 'Undo admin', user_path(id: @student.id, user: { role: :student, schedule_id: nil }), method: :put %></li>
-			<li role="separator" class="divider"></li>
-			<li><%= link_to_if GradeTools.available?, 'Calculate final grade', user_calculate_final_grade_path(user_id: @student.id), method: :post %></li>
+			<div class="dropdown-divider"></div>
+			<%= link_to 'Make assistant', user_path(id: @student.id, user: { role: :assistant }), method: :put, class: 'dropdown-item' %>
+			<%= link_to 'Make head', user_path(id: @student.id, user: { role: :head }), method: :put, class: 'dropdown-item' %>
+			<%= link_to 'Make admin', user_path(id: @student.id, user: { role: :admin }), method: :put, class: 'dropdown-item' %>
+			<%= link_to 'Undo admin', user_path(id: @student.id, user: { role: :student, schedule_id: nil }), method: :put, class: 'dropdown-item' %>
+			<div class="dropdown-divider"></div>
+			<%= link_to_if GradeTools.available?, 'Calculate final grade', user_calculate_final_grade_path(user_id: @student.id), method: :post, class: 'dropdown-item' %>
 			<% end %>
 		</ul>
 	</div>
