--- a/app/assets/stylesheets/tweaks.scss
+++ b/app/assets/stylesheets/tweaks.scss
@@ -11,10 +11,10 @@
           box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
 }
 
-.bar
-{
-    font-family: "Menlo";
-}
+//.bar
+//{
+//    font-family: "Menlo";
+//}
 
 .navbar-nav .dropdown-menu
 {
