--- a/app/views/grades/form.html.erb
+++ b/app/views/grades/form.html.erb
@@ -1,10 +1,31 @@
-		<h1><%= @pset.name %><br><small> by <%= @user.name %> <%= "/ #{@submit.used_login}" if @submit %> <span class="label label-primary"><%= @grade.status %></span></small></h1>
+<% content_for :navbar_items do %>
+<% end %>
 
-<%= form_for([ @submit, @grade ], url: submit_grade_path, method: :put) do |f| %>
-<%= hidden_field_tag :referer, params[:referer] || request.referer %>
+<div class="col-2 px-0 py-0" style="background-color:#F9FCFF; overflow-y:scroll; min-height:0 ">
+	<ul class="nav flex-column">
+		<% @submits.each do |submit| %>
+		<li class="nav-item">
+			<%= link_to "#{submit.user.name}<br>#{submit.pset.name} <span class='badge badge-secondary pull-right'>#{submit.grade.status if submit.grade}</span>".html_safe, submit_grade_path(submit_id: submit.id), class: 'nav-link' %>
+		</li>
+		<% end %>
+	</ul>
+</div>
 
-<div class="row" style="display:flex">
-	<div class="col-xs-12 col-sm-8" style="background-color:white">
+<div class="col-3 pt-2" style="background-color:white; overflow-y:scroll; min-height:0 ">
+	
+	<%= form_for([ @submit, @grade ], url: submit_grade_path, method: :put, html: { class: 'grade-form' }) do |f| %>
+	<%= hidden_field_tag :referer, params[:referer] || request.referer %>
+	
+	<div class="d-flex h-100 flex-column">
+
+	<div class="">
+		<span class="navbar-text">
+		<%= @pset.name %> by <%= @user.name %> <%= "/ #{@submit.used_login}" if @submit %>
+		<span class="badge badge-dark"><%= @grade.status %></span>
+		</span>
+		
+	</div>
+	
 
 		<% if @grade.errors.any? %>
 		<div id="error_explanation">
@@ -18,121 +39,110 @@
 		</div>
 		<% end %>
 
-
-		<div class="form-horizontal">
-
+		<!--
 			<div class="form-group">
-				<label for="" class="col-sm-3 control-label">Latest submit</label>
-				<div class="col-sm-9">
-					<p class="form-control-static">
-						<% if @submit and @submit.submitted_at %>
-						<%= @submit.submitted_at.to_formatted_s(:short) %> (<%= time_ago_in_words(@submit.submitted_at) %> ago)
-						<% else %>
-						never
-						<% end %>
-					</p>
-				</div>
+			<label for="" class="control-label">Latest submit</label>
+			<p class="form-control-static">
+			<% if @submit and @submit.submitted_at %>
+			<%= @submit.submitted_at.to_formatted_s(:short) %> (<%= time_ago_in_words(@submit.submitted_at) %> ago)
+			<% else %>
+			never
+			<% end %>
+			</p>
 			</div>
 
 			<div class="form-group">
-				<label for="" class="col-sm-3 control-label">First graded</label>
-				<div class="col-sm-9">
-					<p class="form-control-static">
-						<% if @grade.persisted? %>
-						<%= @grade.created_at.to_formatted_s(:short) %> (<%= time_ago_in_words(@grade.created_at) %> ago)
-						by <%= @grade.grader.name if @grade.grader %>
-						<br>
-						Last changed: <%= time_ago_in_words(@grade.updated_at) %> ago
-						<% else %>
-						never
-						<% end %>
-					</p>
-				</div>
+			<label for="" class="control-label">First graded</label>
+			<p class="form-control-static">
+			<% if @grade.persisted? %>
+			<%= @grade.created_at.to_formatted_s(:short) %> (<%= time_ago_in_words(@grade.created_at) %> ago)
+			by <%= @grade.grader.name if @grade.grader %>
+			<br>
+			Last changed: <%= time_ago_in_words(@grade.updated_at) %> ago
+			<% else %>
+			never
+			<% end %>
+			</p>
 			</div>
+		-->
 
 			<% if @submit and not @submit.url.blank? %>
 			<div class="form-group">
-				<label for="" class="col-sm-3 control-label">Link</label>
-				<div class="col-sm-9">
-					<p class="form-control-static">
-						<%= link_to @submit.url, @submit.url %>
-					</p>
-				</div>
+				<label for="" class="control-label">Link</label>
+				<p class="form-control-static">
+					<%= link_to @submit.url, @submit.url %>
+				</p>
 			</div>
 			<% end %>
 
 			<div class="form-group">
-				<label for="" class="col-md-3 control-label">Focus points</label>
-				<div class="col-md-9">
-					<%= f.text_area :comments, class: 'form-control', rows: 15 %>
-					<span id="helpBlock" class="help-block">Use bullets <code>*</code> to separate points. Use <code>`</code>backticks<code>`</code> to insert code.</span>
-				</div>
+				<span class="pull-right" data-toggle="tooltip" title="Use bullets * to separate points. Use `backticks` to insert code."><%= fa_icon 'question-circle'%></span>
+				<label for="grade_comments" class="control-label">Focus points </label>
+				<%= f.text_area :comments, class: 'form-control', rows: 10, autofocus:true %>
 			</div>
-
-			<% if @grading_definition && @grading_definition['subgrades'] %>
-			<% @grading_definition['subgrades'].each do |subgrade_name, subgrade_type| %>
-			<% if subgrade_type == 'integer' %>
-			<div class="form-group">
-				<label for="input_<%= subgrade_name %>" class="col-sm-3 control-label"><%= subgrade_name.capitalize %></label>
-				<div class="col-sm-9">
-					<input type="text" class="form-control" id="input_<%= subgrade_name %>" name="grade[subgrades[<%= subgrade_name %>]]" placeholder="" value="<%= @grade.subgrades[subgrade_name] if @grade.subgrades %>">
+	
+			<div id="grade-boxes" class="d-flex">
+				<% if @grading_definition && @grading_definition['subgrades'] %>
+				<% @grading_definition['subgrades'].each do |subgrade_name, subgrade_type| %>
+				<% if subgrade_type == 'integer' %>
+				<div class="form-group">
+					<label for="input_<%= subgrade_name %>" class="control-label ml-1 mb-0"><%= subgrade_name.capitalize %></label>
+					<input type="text" class="form-control form-control-sm" id="input_<%= subgrade_name %>" name="grade[subgrades[<%= subgrade_name %>]]" placeholder="" value="<%= @grade.subgrades[subgrade_name] if @grade.subgrades %>">
 				</div>
-			</div>
-			<% elsif subgrade_type == 'boolean' %>
-			<div class="form-group">
-				<div class="col-sm-offset-3 col-sm-9">
+				<% elsif subgrade_type == 'boolean' %>
+				<div class="form-group">
 					<div class="checkbox">
 						<label>
 							<%= check_box_tag "grade[subgrades[#{subgrade_name}]]", true, @grade.subgrades && @grade.subgrades[subgrade_name] %> <%= subgrade_name.capitalize %>
 						</label>
 					</div>
 				</div>
+				<% end %>
+				<% end %>
+				<% end %>
 			</div>
-			<% end %>
-			<% end %>
-			<% end %>
 			
 			<% if current_user.admin? || not(@grading_definition && @grading_definition['subgrades'] && @grading_definition['calculation']) %>
 			<div class="form-group">
-				<label for="inputPassword3" class="col-sm-3 control-label">Grade</label>
-				<div class="col-sm-9">
-					<div class="input-group">
-						<%= f.text_field :grade, class: 'form-control', value: @grade.grade %>
-						<span class="input-group-btn">
-							<button class="btn btn-default" type="button" id="pass-btn">P</button>
-							<button class="btn btn-default" type="button" id="fail-btn">F</button>
-						</span>
-					</div>
+				<label for="grade_grade" class="control-label">Grade</label>
+				<div class="input-group">
+					<%= f.text_field :grade, class: 'form-control form-control-sm', value: @grade.grade %>
+					<span class="input-group-append">
+						<button class="btn btn-default btn-sm" type="button" id="pass-btn">Pass</button>
+						<button class="btn btn-default btn-sm" type="button" id="fail-btn">Fail</button>
+					</span>
 				</div>
 			</div>
 			<% end %>
 
 			<% if current_user.admin? %>
 			<div class="form-group">
-				<label for="inputPassword3" class="col-sm-3 control-label">Calculated grade</label>
-				<div class="col-sm-9">
-					<div class="input-group">
-						<p class="form-control-static"><%= @grade.calculated_grade %></p>
-					</div>
+				<label for="inputPassword3" class="control-label">Calculated grade</label>
+				<div class="input-group">
+					<p class="form-control-static"><%= @grade.calculated_grade %></p>
 				</div>
 			</div>
 			<% end %>
-			
-			<hr>
 
-			<div class="form-group">
-				<div class="col-sm-offset-3 col-sm-9">
-					<% if current_user.admin? || @grade.open? %>
-					<%= f.submit class: 'btn btn-primary form-control' %>
-					<% end %>
-				</div>
+			<div class="form-group d-flex mt-auto">
+				<% if current_user.admin? || @grade.open? %>
+				<%= f.submit 'Save', class: 'btn btn-primary form-control' %>
+				<% end %>
+				<% if current_user.senior? and @submit %>
+				<% if current_user.admin? %>
+				<%= link_to "Destroy", submit_path(id: @submit.id, referer: request.referer), method: :delete, data: { confirm: "Sure? This removes proof of student submitting. If you want to delete the grade, just empty text field and save the grade." }, class: 'btn btn-secondary ml-1' if @submit %>
+				<% end %>
+				<%= link_to_if @submit.grade && @submit.grade.persisted?, "Publish", submit_grade_path(submit_id: @submit.id, grade: { status: :published }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-secondary ml-1' do "" end %>
+				<% end %>
 			</div>
-
+	
 		</div>
-	</div>
-
-	<div class="col-xs-12 col-sm-4">
+		
+		<% end %>
+	
+	
 		<% @grades.each do |grade| %>
+		<hr>
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<%= grade.submit.pset.name %>
@@ -152,16 +162,13 @@
 		<% end %>
 	</div>
 
+<div class="col-7" style="background-color:black; overflow-y:scroll; min-height:0">
+	<% if @submit.url.present? %>
+	<iframe src="<%= @submit.url %>" class="w-100 h-100 m-0"></iframe>
+	<% end %>
 </div>
-	
-<% end %>
 
-<% if current_user.senior? and @submit %>
-<hr>
-<p>
-<% if current_user.admin? %>
-<%= link_to "Destroy submit completely", submit_path(id: @submit.id, referer: request.referer), method: :delete, data: { confirm: "Sure? This removes proof of student submitting. If you want to delete the grade, just empty text field and save the grade." }, class: 'btn btn-danger' if @submit %>
-<% end %>
-<%= link_to_if @submit.grade && @submit.grade.persisted?, "Publish this grade now", submit_grade_path(submit_id: @submit.id, grade: { status: :published }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-default' do "" end %>
-</p>
-<% end %>
+	
+<script>
+$('[data-toggle="tooltip"]').tooltip();
+</script>
