--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -2,6 +2,7 @@
 
 <%= link_to '<i class="glyphicon glyphicon-download-alt"></i> Update courseware...'.html_safe, course_import_path, method: :post, class: 'dropdown-item' %>
 <%= link_to '<i class="glyphicon glyphicon-check"></i> Show pages'.html_safe, admin_pages_path, class: 'dropdown-item' %>
+<div class="dropdown-divider"></div>
 <%= link_to '<i class="glyphicon glyphicon-wrench"></i> Configuration'.html_safe, config_path, class: 'dropdown-item' %>
 <%= link_to '<i class="glyphicon glyphicon-eye-open"></i> Permissions'.html_safe, permissions_path, class: 'dropdown-item' %>
 <div class="dropdown-divider"></div>
